--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/username/rust-bg-muter"
 windows = { version = "0.58", features = [
     "Win32_Foundation",
     "Win32_System_Com",
+    "Win32_System_Registry",
     "Win32_System_Threading",
     "Win32_System_ProcessStatus",
     "Win32_Media_Audio",
