Add Windows icon and improve shutdown handling
Added assets/icon.ico and updated build.rs to embed the icon in Windows builds, generating it from PNG if needed. Integrated the 'ico' crate for icon generation. Improved shutdown logic by introducing a shutdown channel and atomic flag, ensuring background threads and tray exit cleanly even when the window is hidden. Updated application and binary naming in Cargo.toml.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,8 @@ parking_lot = "0.12"
 
 [build-dependencies]
 winres = "0.1"
+image = "0.25"
+ico = "0.3"
 
 [profile.release]
 opt-level = 3
@@ -70,10 +72,10 @@ panic = "abort"
 strip = true
 
 [[bin]]
-name = "rust-bg-muter"
+name = "bg-muter"
 path = "src/main.rs"
 
 [package.metadata.winres]
-OriginalFilename = "rust-bg-muter.exe"
+OriginalFilename = "bg-muter.exe"
 ProductName = "Background Muter"
 FileDescription = "Mute background applications automatically"
