--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "rust-bg-muter"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 authors = ["Background Muter Team"]
-description = "A high-performance Windows application to mute background applications"
+description = "A lightweight Windows application to mute background applications"
 license = "MIT"
 repository = "https://github.com/username/rust-bg-muter"
 
@@ -18,58 +18,45 @@ windows = { version = "0.58", features = [
     "Win32_Media_Audio",
     "Win32_Media_Audio_Endpoints",
     "Win32_UI_WindowsAndMessaging",
-    "Win32_UI_Shell",
-    "Win32_Graphics_Gdi",
-    "Win32_System_LibraryLoader",
-    "Win32_Security",
-    "implement",
 ]}
 
-# GUI framework
-eframe = { version = "0.29", features = ["persistence"] }
-egui = "0.29"
-egui_extras = { version = "0.29", features = ["image"] }
-
-# System tray
+# System tray (lightweight)
 tray-icon = "0.19"
 
-# Image handling for tray icon
-image = "0.25"
+# Image handling for tray icon (minimal features)
+image = { version = "0.25", default-features = false, features = ["png"] }
 
 # Serialization for config
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# Async runtime for background tasks
-tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "time", "macros"] }
-
-# Cross-thread communication
+# Cross-thread communication (lightweight)
 crossbeam-channel = "0.5"
 
-# Logging
+# Logging (minimal)
 log = "0.4"
-env_logger = "0.11"
+env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
 
 # Directories for config storage
 dirs = "5.0"
-
-# Once cell for lazy statics
-once_cell = "1.20"
 
 # Parking lot for better mutexes
 parking_lot = "0.12"
 
 [build-dependencies]
 winres = "0.1"
-image = "0.25"
+image = { version = "0.25", default-features = false, features = ["png"] }
 ico = "0.3"
 
 [profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
-panic = "abort"
-strip = "debuginfo"
+opt-level = "z"      # Optimize for size
+lto = true           # Link-time optimization
+codegen-units = 1    # Single codegen unit for better optimization
+panic = "abort"      # Abort on panic (smaller binary)
+strip = true         # Strip all symbols
+
+[profile.dev]
+opt-level = 1        # Some optimization in dev for faster iteration
 
 [[bin]]
 name = "bg-muter"
