--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-bg-muter"
-version = "1.1.0"
+version = "1.2.0"
 edition = "2021"
 authors = ["Background Muter Team"]
 description = "A lightweight Windows application to mute background applications"
@@ -15,9 +15,11 @@ windows = { version = "0.58", features = [
     "Win32_System_Registry",
     "Win32_System_Threading",
     "Win32_System_ProcessStatus",
+    "Win32_System_LibraryLoader",
     "Win32_Media_Audio",
     "Win32_Media_Audio_Endpoints",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_Graphics_Gdi",
 ]}
 
 # System tray (lightweight)
