Add Windows 11 visual styles to settings dialog
Embed a Windows visual styles manifest and initialize common controls for modern UI appearance. Update the settings dialog to use Segoe UI font, group boxes, and improved layout for a Windows 11 look. Adjust control creation to apply the new font and styles throughout the dialog.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ windows = { version = "0.58", features = [
     "Win32_Media_Audio",
     "Win32_Media_Audio_Endpoints",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_UI_Controls",
     "Win32_Graphics_Gdi",
 ]}
 
